quartz/styles/custom.scss
/* ... */
.footnotes ul,
.footnotes ol {
  margin-top: $base-margin;
}

audio {
  width: 85%;
}

// Partially blends audio player with background
[data-theme="dark"] audio {
  mix-blend-mode: luminosity;
}

sup {
  line-height: 0; // Don't push other lines away
}

#trout-ornament-container {
  align-items: center;
  display: flex;
  justify-content: center;

  & > span {
    vertical-align: middle;
    font-family: "EBGaramond12", serif;
    font-size: 3rem;
    filter: saturate(90%);
    color: var(--blue);
    opacity: light-dark(0.6, 0.7);
  }

  // Left text flourish
  & > span:first-of-type {
    margin-right: calc(0.75 * $base-margin);
  }

  // Trout ornament
  & > img {
    width: calc(6 * $base-margin);
    margin-top: calc(2 * $base-margin);
    margin-bottom: calc(2 * $base-margin);
    filter: light-dark(none, invert(66%)) !important;
    opacity: light-dark(0.5, 1);
  }

  // Right text flourish
  & > span:last-of-type {
    margin-left: calc($base-margin);
  }
}

.video-container {
  position: relative;
}

.video-container > .vsc-controller {
  position: absolute !important; /* remove from flow */
  inset: 0; /* stretch over the whole video */
  pointer-events: none; /* keep clicks for the extension if you prefer, otherwise remove */
  background: none !important; /* no extra paint */
  z-index: 100; // Ensure it's on top of the video but behind eg search-container
}

// Hide video speed controller
.vsc-controller:has(+ video.no-vsc),
// Sometimes there's an img between the video and the vsc-controller
.vsc-controller:has(+ * + video.no-vsc),
.vsc-controller:has(+ video[autoplay]) {
  display: none !important;
}

:root[data-theme="dark"] video,
:root[data-theme="dark"] img {
  & .invert {
    filter: grayscale(50%) invert(100%) brightness(95%) hue-rotate(180deg);
  }
}

figure:has(> .subfigure) {
  display: flex;
  justify-content: center;
  flex-wrap: wrap;

  > figcaption {
    flex: 0 0 100%;
    max-width: 100%;
  }
}

figure {
  margin: 0; // Use maximal space
}

.subfigure {
  margin: $base-margin;
}

figure,
.subfigure {
  flex: 1 1 0px;

  & img {
    display: block;
    margin-left: auto;
    margin-right: auto;
  }

  // IDK why but there can be an empty p between the figure and the next element
  & + figure,
  & + p:empty + figure {
    margin-top: calc(3 * $base-margin);
  }
}

#article-title,
.page-listing-title {
  font-variant-numeric: lining-nums;
}

#article-title {
  margin: calc(4 * $base-margin) 0 0;

  @media all and (max-width: $max-mobile-width) {
    margin-top: $base-margin;
  }

  .popover & {
    margin-top: calc(1.5 * $base-margin) !important;
  }
}

#article-title:has(+ .subtitle),
h1:has(+ .subtitle),
h2:has(+ .subtitle),
h3:has(+ .subtitle),
h4:has(+ .subtitle),
h5:has(+ .subtitle),
h6:has(+ .subtitle),
p:has(+ .subtitle),
.admonition-title:not(.is-collapsed *):has(+ .admonition-content > .subtitle) {
  margin-bottom: 0;
}

.subtitle {
  color: var(--midground);
  margin-top: calc(0.25 * $base-margin);
  font-size: var(--font-size-minus-1);
  text-wrap: balance;

  .admonition & {
    color: color-mix(in srgb, var(--midground) 60%, var(--color));

    & a,
    & a:visited {
      &,
      & * {
        color: inherit;
      }
    }
  }

  .timeline & {
    color: var(--midground-strong);
  }
}

figure > img {
  z-index: -1;
}

figcaption {
  margin-top: calc(0.5 * $base-margin);
  position: relative;
  max-width: 90%;
  margin-left: auto;
  margin-right: auto;
  text-wrap: balance;
}

img,
figcaption,
.float-right {
  text-align: center;
  color: var(--midground-strong);
  font-size: var(--font-size-minus-1); /* smaller than the surrounding text */
}

.float-right {
  margin: calc(1.5 * $base-margin) 0 calc(1.5 * $base-margin) calc(2 * $base-margin);

  & img,
  img.float-right {
    margin-left: auto;
    margin-right: auto;
    display: block;
  }

  float: right;
  max-width: 45%;
}

.testimonial-maybe-negative-margin {
  margin-top: calc(-7 * $base-margin);

  @media all and (width <= 700px) {
    margin-top: initial;
  }
}

.no-select {
  -webkit-user-drag: none;
  user-select: none;
}

.book-citation {
  font-style: italic;
}

.collapsible {
  & .collapsible-title {
    display: flex;

    & h1,
    h2,
    h3,
    h4,
    h5,
    h6,
    p {
      margin-top: 0;
      margin-bottom: 0;
    }
  }

  & .content {
    max-height: 0;
    overflow: hidden;
    transition: max-height $transition-duration-quick ease-out;
  }
}

svg.fold-icon {
  --icon-size: 18px;

  display: inline-flex; /* Use inline-flex for better alignment */
  align-items: center;
  justify-content: center;
  margin: 0;
  margin-left: calc(0.5 * $base-margin);
  margin-top: 0.25rem;
  cursor: pointer;
  width: var(--icon-size);
  height: var(--icon-size);
  fill: var(--midground); /* Set the default color here */
  transition: transform $transition-duration-quick ease-out; /* Add a smooth transition */
  transform: rotate(-90deg); /* Initial 90-degree rotation */

  &[aria-expanded="true"] {
    transform: rotate(0deg); /* Rotate 180 degrees when expanded */
  }
}

hr {
  max-width: 97.5%; // Looks weird if it extends all the way to the right
  margin: calc(3 * $base-margin) 0;
  margin-left: auto;
  margin-right: auto;
}

.right {
  & h1,
  h2,
  h3,
  h4,
  h5,
  h6,
  p,
  a,
  li {
    // Don't make popover text gray
    &:not(* .popover-inner *) {
      color: var(--midground);
    }
  }

  & #content-meta {
    font-size: var(--font-size-minus-1);
    margin-bottom: 0;
  }
}

.authors {
  & p {
    color: var(--midground);
    margin-top: 0;
    text-indent: -0.2rem;
    padding-left: 0.2rem;
    line-height: 1.25rem;

    & a {
      color: inherit;
    }

    &:not(:last-child) {
      margin-bottom: 0;
    }
  }

  & .publication-str {
    font-variant-numeric: lining-nums;
  }
}
/* ... */

